# Fractals

./: 1q  CMakeLists.txt  README.md  \  a.out  complex.cpp  complex.h  julia.cpp  julia.h  juliaexec  main  mainjul.cpp  mainmand.cpp  mandelbrot.cpp  mandelbrot.h  mandelbrotexec  math.cpp  math.h  math.h.gch  newton.py  window.cpp  window.h
build-dir/: CMakeCache.txt  Makefile  cmake_install.cmake
build-dir/complex_autogen/: moc_predefs.h
build-dir/mandelbrotexec_autogen/: moc_predefs.h
